--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.appshop">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppShop">
         <activity
-            android:name=".RestaurantHoliday"
-            android:exported="false" />
-        <activity
-            android:name=".RestaurantAccountSetting"
+            android:name=".RestaurantAccountInfoShow"
             android:exported="false" />
         <activity
             android:name=".Restaurant"
