食べログ管理機能の追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppShop">
         <activity
+            android:name=".RestaurantSearchReview"
+            android:exported="false" />
+        <activity
+            android:name=".ShowRestaurantReservations"
+            android:exported="false" />
+        <activity
             android:name=".RestaurantAccountInfoShow"
             android:exported="false" />
         <activity
