--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".RestaurantSeatShow"
             android:exported="false" />
         <activity
+            android:name=".RestaurantAddSeat"
+            android:exported="false" />
+        <activity
             android:name=".RestaurantAccountInfoShow"
             android:exported="false" />
         <activity
