--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppShop">
         <activity
-            android:name=".RestaurantSearchReview"
+            android:name=".RestaurantReviewList"
             android:exported="false" />
         <activity
             android:name=".ShowRestaurantReview"
